@@ -1,3 +1,8 @@
+2019-04-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/pdk/gen.c:
+	  Fix a bug in wide subtraction from pseudoregister with stack result.
+
 2019-04-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* Merged pdk branch to trunk.
